Begin documentation of optional dependency